--- a/src/shared/components/Tabs/style.module.css
+++ b/src/shared/components/Tabs/style.module.css
@@ -8,6 +8,5 @@
 
 .activeTab {
   border: 2px solid var(--primary-color) !important;
-  padding: 8px 16px;
   border-radius: 8px;
 }
